<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bg_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/my_chinese_zodiac"
            android:textSize="32sp"
            android:textColor="@color/gold"
            android:textAlignment="center"
            android:fontFamily="@font/gof3"
            />

        <RelativeLayout
            android:id="@+id/btnDatePicker"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            >

            <ImageView
                android:id="@+id/datePickerButtonImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:src="@drawable/portal2"
                android:contentDescription="@string/app_name"
                />

            <EditText
                android:id="@+id/inputDate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:letterSpacing="0.01"
                android:textColor="@color/gold"
                android:fontFamily="@font/poppins_semibold"
                android:layout_centerInParent="true"
                android:textColorHint="@color/gold"
                android:hint="@string/placeholder_date"
                android:background="@color/maroon"
                android:cursorVisible="false"
                android:inputType="date"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/gradient_overlay">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/btn_submit"
                android:textColor="@color/gold"
                android:textSize="18dp"
                android:textAllCaps="false"
                android:letterSpacing="0.01"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/get_chinese_zodiac"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>